--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -4137,4 +4137,19 @@ Exit curent flight and try again.</comment>
     <value>主菜单</value>
     <comment>MAIN MENU</comment>
   </data>
+  <data name="PauseControl.BackToMainMenuUpper" xml:space="preserve">
+    <value>返回主菜单</value>
+    <comment>BACK TO MAIN MENU</comment>
+  </data>
+  <data name="Global.New" xml:space="preserve">
+    <value>新</value>
+    <comment>NEW</comment>
+  </data>
+  <data name="Global.Free" xml:space="preserve">
+    <value>免费</value>
+    <comment>FREE</comment>
+  </data>
+  <data name="Error.SimbriefRefreshTokenExpired" xml:space="preserve">
+    <value>你的Navigraph登录已过期。我们将引导你重新登录并下载飞行计划。</value>
+  </data>
 </root>
