Added new string

--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -3397,4 +3397,7 @@ Quittez le vol actuel et réessayez.</value>
     <value>CONTINUER
 LE VOL</value>
   </data>
+  <data name="WeightBalanceControl.TotalWeight" xml:space="preserve">
+    <value>Poids Total</value>
+  </data>
 </root>
